supervisor-macros/tests/ui/compile_fail/unknown_dep.stderr
error: unknown dependency `MISSING` — not a declared node or pool
 --> tests/ui/compile_fail/unknown_dep.rs:6:32
  |
6 |     node A = Terminate, deps: [MISSING];
  |                                ^^^^^^^
